--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+html>
 <head>
 	<title>Ethan Ott</title>
 </head>
@@ -8,11 +8,11 @@
 <img src="Nvigation barEdited.jpg" width="1000" height="100" alt="Nvigation BarEdited">
 	<p>
 <!--About me section of the website-->
-<font face="sanserif"><h3>About Me</h3></font>
+<font face="sanserif"><h3>~ About Me</h3></font>
 	<font color="grey">
 		<p>Im am currently attenending High School, I am also studing Computer Science being that I would like to study it in College. I am also working on multiple coding languages to learn. In addition I am working on several Ios Apps for the App Store that will be applicable for Iphones and Ipads.</p></font>
 	<hr style="margin-bottom:20px;">
-	<font face="sanserif"><h3>My Work</h3></font>
+	<font face="sanserif"><h3>~ My Work</h3></font>
 	<font color="grey">
 		<p>
 		Currently working with <a href="">Nathan Pahucki</a> a programmer who has been guiding and teaching me how to code. Some of the skills in coding in which I know are:
@@ -26,10 +26,11 @@
 			<li> Javascript
 			<li> Objective-C
 			<li> Arduino
+			<li> Java
 		</ul>
 		<p>
-		In addition I am also currently developing a App known as "Picslydr", it is a sliding picture game for your Iphone. Check out the code on <a href="https://github.com/ethott">Github</a>.
-		For more informaion go to <a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">my profile</a> on linkedin.
+		In addition I am also currently developing a App known as "Picslydr", it is a sliding picture game for your Iphone. Check out the code on <a href="https://github.com/ethott">Github</a>. Im planning on developing several more apps for the app store. 
+		<p>For more informaion about me and if you have any advice or links to lessons, go to  <a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">my profile</a> on linkedin also check out my contact page on this website.
 	</p></font>
 	<hr style="margin-bottom:20px;">
 	<p><a href="#top">Back to top</a></p>
