Navigation Bar functionality
Updated the functionality of the Navigation Bar and fixed minor issues.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-html>
+<html>
 <head>
 	<title>Ethan Ott</title>
+	<link rel="stylesheet" type="text/css" href="site.css">
 </head>
 <body>
 	<a name="top"></a>
 <img src="../../Documents/HomePageSizingImage.jpg" width="1000" height="300" alt="HomePageSizingImage">
-<img src="Nvigation barEdited.jpg" width="1000" height="100" alt="Nvigation BarEdited">
+<div class="navbar">
+	<ul class="navbar-ul">
+		<li class="navbar-li"><a class="navbar-li-a active-navbar-el" href="index.html">Home</a></li>
+		<li class="navbar-li"><a class="navbar-li-a" href="https://github.com/ethott">Github</a></li>
+		<li class="navbar-li"><a class="navbar-li-a" href="contacts.html">Contacts</a></li>
+		<li class="navbar-li"><a class="navbar-li-a" href="#">App Store</a></li>
+	</ul>
+</div>
 	<p>
 <!--About me section of the website-->
 <font face="sanserif"><h3>~ About Me</h3></font>
@@ -17,16 +25,16 @@ html>
 		<p>
 		Currently working with <a href="">Nathan Pahucki</a> a programmer who has been guiding and teaching me how to code. Some of the skills in coding in which I know are:
 		<ul>
-			<li> Html
-			<li> CSS
+			<li> Html</li>
+			<li> CSS</li>
 		</ul>
 	</p>
 		<p>Some of the programming laguages that I am currently learning are:</p>
 		<ul>
-			<li> Javascript
-			<li> Objective-C
-			<li> Arduino
-			<li> Java
+			<li> Javascript</li>
+			<li> Objective-C</li>
+			<li> Arduino</li>
+			<li> Java</li>
 		</ul>
 		<p>
 		In addition I am also currently developing a App known as "Picslydr", it is a sliding picture game for your Iphone. Check out the code on <a href="https://github.com/ethott">Github</a>. Im planning on developing several more apps for the app store. 
