--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
 	<font color="gray">
 	Email Me at: <a href="mailto:ethan8496@gmail.com">Ethan Ott</a>
 </p><p>
-	View my work and check out other social media and work related sites at:
+	View my work and check out other social media and other work related sites at:
 	<ul>
 		<li><a href="https://github.com/ethott">GitHub</a>
 		<li><a href="https://geekli.st/ethott">GeekList</a>
