--- a/contacts.html
+++ b/contacts.html
@@ -4,15 +4,25 @@
 	<link rel="stylesheet" type="text/css" href="site.css">
 </head>
 <body>
-<img src="../../Documents/HomePageSizingImage.jpg" width="1000" height="300" alt="HomePageSizingImage">
+	<div>
+<div class="homepageimage">
+	<div class="name-prop indent">Ethan Ott</div>
+	<div class="button"><a href="#">Check out my Apps on the App Store</a></div>
+	<div class="button"><a href="https://github.com/ethott">Check out my Github account</a></div>
+	<div class="filler indent">Computer Programmer/ Nerd</div>
+	<div class="filler indent">Developer and Designer</div>
+		
+</div>
 <div class="navbar">
 	<ul class="navbar-ul">
+		
 		<li class="navbar-li"><a class="navbar-li-a" href="index.html">Home</a></li>
 		<li class="navbar-li"><a class="navbar-li-a" href="https://github.com/ethott">Github</a></li>
 		<li class="navbar-li"><a class="navbar-li-a active-navbar-el" href="contacts.html" >Contacts</a></li>
 		<li class="navbar-li"><a class="navbar-li-a" href="#">App Store</a></li>
 	</ul>
 </div>
+
 
 <p>
 	<font face="sanserif"><h3>Contact Information</h3></font>
@@ -28,7 +38,8 @@
 	</ul>
 	</font>
 	<hr style="margin-bottom:20px;">
-	If all else fails go ahead and send me and email I will  most likley reply.	
+	ls go ahead and send me and email I will  most likley reply.	
 </p>
+</div>
 </body>
 </html>
