--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <head>
 	<title>Ethan Ott</title>
 	<link rel="stylesheet" type="text/css" href="site.css">
+	<link rel="shortcut" href"favicon.ico" type="image/x-icon" />
 </head>
 <body>
+	<!--Main home page image-->
 	<a name="top"></a>
-<img src="../../Documents/HomePageSizingImage.jpg" width="1000" height="300" alt="HomePageSizingImage">
+<div class="homepageimage">
+	<div class="name-prop indent">Ethan Ott</div>
+	<div class="button"><a href="#">Check out my Apps on the App Store</a></div>
+	<div class="button"><a href="https://github.com/ethott">Check out my Github account</a></div>
+	<div class="filler indent">Computer Programmer/ Nerd</div>
+	<div class="filler indent">Developer and Designer</div>
+		
+</div>
+<!--Navigation Bar -->
 <div class="navbar">
 	<ul class="navbar-ul">
 		<li class="navbar-li"><a class="navbar-li-a active-navbar-el" href="index.html">Home</a></li>
@@ -15,32 +25,42 @@
 	</ul>
 </div>
 	<p>
+		<div class="divleft">
 <!--About me section of the website-->
-<font face="sanserif"><h3>~ About Me</h3></font>
-	<font color="grey">
-		<p>Im am currently attenending High School, I am also studing Computer Science being that I would like to study it in College. I am also working on multiple coding languages to learn. In addition I am working on several Ios Apps for the App Store that will be applicable for Iphones and Ipads.</p></font>
+<p class="indent header-prop">~ About Me</p>
+	
+		<p class="text-prop">I am Ethan Ott, currently independitly studiyng Computer Science. My focus is mainly on developing and designing. I am planning on developing several iOs apps for the app store.    </p></font>
 	<hr style="margin-bottom:20px;">
-	<font face="sanserif"><h3>~ My Work</h3></font>
-	<font color="grey">
-		<p>
+	<p class="indent header-prop">~ My Work</p>
+		<p class="text-prop">
 		Currently working with <a href="">Nathan Pahucki</a> a programmer who has been guiding and teaching me how to code. Some of the skills in coding in which I know are:
-		<ul>
+		<ul class="gray">
 			<li> Html</li>
 			<li> CSS</li>
 		</ul>
 	</p>
-		<p>Some of the programming laguages that I am currently learning are:</p>
-		<ul>
+		<p class="text-prop">Some of the programming laguages that I am currently learning are:</p>
+		<ul class="gray">
 			<li> Javascript</li>
 			<li> Objective-C</li>
 			<li> Arduino</li>
 			<li> Java</li>
 		</ul>
-		<p>
+		<p class="text-prop">
 		In addition I am also currently developing a App known as "Picslydr", it is a sliding picture game for your Iphone. Check out the code on <a href="https://github.com/ethott">Github</a>. Im planning on developing several more apps for the app store. 
-		<p>For more informaion about me and if you have any advice or links to lessons, go to  <a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">my profile</a> on linkedin also check out my contact page on this website.
-	</p></font>
+		For more informaion about me and if you have any advice or links to lessons, go to  <a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">my profile</a> on linkedin also check out my contact page on this website.
+	</p>
+	<p>
+		<p class="header-prop"> Work </p>
+		<ul class="text-prop">
+			<li>iOS Developer and Web Designer 2014-(currently)</li>
+			
+		</ul>
+		
+	</p>
 	<hr style="margin-bottom:20px;">
-	<p><a href="#top">Back to top</a></p>
+	<!--Bottom Navigation Bar-->
+	<p class="bottom-prop"> <a href="#top">Back to top</a> | <a href="contacts.html">Contacts</a> | <a href="https://github.com/ethott">Github</a> | <a href="#">Appstore</a></p>
+</div>
 </body>
 </html>
