Add favicon, modified files

--- a/contacts.html
+++ b/contacts.html
@@ -23,22 +23,33 @@
 	</ul>
 </div>
 
+<div"divleft">
 
-<p>
-	<font face="sanserif"><h3>Contact Information</h3></font>
+	<p class"indent header-prop">Contact Information</p>
 	<hr style="margin-bottom;20px;">
 	<font color="gray">
-	Email Me at: <a href="mailto:ethan8496@gmail.com">Ethan Ott</a>
-</p><p>
+	<p class="indent">Email Me at: <a href="mailto:ethan8496@gmail.com">Ethan Ott</a></p>
+</p>
+<p>
 	View my work and check out other social media and other work related sites at:
 	<ul>
-		<li><a href="https://github.com/ethott">GitHub</a>
-		<li><a href="https://geekli.st/ethott">GeekList</a>
-		<li><a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">Linkedin</a>	
+		<li><a href="https://github.com/ethott">GitHub</a> - The contributed projects to github, view the code here!</li>
+		<li><a href="https://geekli.st/ethott">GeekList</a>- Catch up with my current ideas and projects here!</li>
+		<li><a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">Linkedin</a>- View a work based profile of me here!</li>	
 	</ul>
 	</font>
 	<hr style="margin-bottom:20px;">
-		
+	<p class"indent header-prop">Website Refrences:</p>
+	<p>
+	<ul class="text-prop">
+		<li><a href="#">W3 Schools</a></li>
+		<li><a href="#">Apple Developer</a></li>
+		<li><a href="#">Stackoverflow</a></li>
+	</ul>
+	<hr style="margin-bottom:20px;">
+
+	<p class="bottom-prop"> <a href="#top">Back to top</a> | <a href="contacts.html">Contacts</a> | <a href="https://github.com/ethott">Github</a> | <a href="#">Appstore</a></p>
+	
 </p>
 </div>
 </body>
