--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
 	<title>Ethan Ott</title>
 	<link rel="stylesheet" type="text/css" href="site.css">
-	<link rel="shortcut" href"favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<!--Main home page image-->
@@ -29,17 +30,17 @@
 <!--About me section of the website-->
 <p class="indent header-prop">~ About Me</p>
 	
-		<p class="text-prop">I am Ethan Ott, currently independitly studiyng Computer Science. My focus is mainly on developing and designing. I am planning on developing several iOs apps for the app store.    </p></font>
+		<p class="text-prop">I am Ethan Ott, currently independitly studiyng Computer Science. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several iOs apps for the app store. My dream job is to work for google.    </p>
 	<hr style="margin-bottom:20px;">
 	<p class="indent header-prop">~ My Work</p>
 		<p class="text-prop">
-		Currently working with <a href="">Nathan Pahucki</a> a programmer who has been guiding and teaching me how to code. Some of the skills in coding in which I know are:
+		Currently working with <a href="https://www.linkedin.com/in/nathanpahucki?authType=NAME_SEARCH&authToken=947c&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CentityType%3AentityHistoryName%2CclickedEntityId%3Amynetwork_mynetwork_mynetwork_346538%2Cidx%3A1">Nathan Pahucki</a> a programmer who has been guiding and teaching me how to code. Some of the skills in coding in which I know are:
 		<ul class="gray">
 			<li> Html</li>
 			<li> CSS</li>
 		</ul>
 	</p>
-		<p class="text-prop">Some of the programming laguages that I am currently learning are:</p>
+		<p class="text-prop">Some of the programming languages that I am currently learning are:</p>
 		<ul class="gray">
 			<li> Javascript</li>
 			<li> Objective-C</li>
@@ -47,13 +48,12 @@
 			<li> Java</li>
 		</ul>
 		<p class="text-prop">
-		In addition I am also currently developing a App known as "Picslydr", it is a sliding picture game for your Iphone. Check out the code on <a href="https://github.com/ethott">Github</a>. Im planning on developing several more apps for the app store. 
-		For more informaion about me and if you have any advice or links to lessons, go to  <a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">my profile</a> on linkedin also check out my contact page on this website.
+ Check out the code for most of my projects on <a href="https://github.com/ethott">Github</a>. Im planning on developing several more apps for the app store.  For more informaion about me and if you are seeking for any advice or to find links to lessons, go to  <a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">my profile</a> on linkedin also check out my contact page on this website or just go ahead and send me a email.
 	</p>
 	<p>
 		<p class="header-prop"> Work </p>
 		<ul class="text-prop">
-			<li>iOS Developer and Web Designer 2014-(currently)</li>
+			<li>iOS Developer and Web Designer 2014-(currently)</li> 
 			
 		</ul>
 		
