--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<div>
+		<!--Homepageimage code -->
 <div class="homepageimage">
 	<div class="name-prop indent">Ethan Ott</div>
 	<div class="button"><a href="#">Check out my Apps on the App Store</a></div>
