--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Ethan Ott</title>
+	<!-- Links page site.css and adds favicon-->
 	<link rel="stylesheet" type="text/css" href="site.css">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -9,6 +10,7 @@
 	<!--Main home page image-->
 	<a name="top"></a>
 <div class="homepageimage">
+	<!-- Text displayed on the image "homepageimage.jpg"-->
 	<div class="name-prop indent">Ethan Ott</div>
 	<div class="button"><a href="#">Check out my Apps on the App Store</a></div>
 	<div class="button"><a href="https://github.com/ethott">Check out my Github account</a></div>
@@ -19,6 +21,7 @@
 <!--Navigation Bar -->
 <div class="navbar">
 	<ul class="navbar-ul">
+		<!-- Text and buttons displayed on "navbar.jpg"-->
 		<li class="navbar-li"><a class="navbar-li-a active-navbar-el" href="index.html">Home</a></li>
 		<li class="navbar-li"><a class="navbar-li-a" href="https://github.com/ethott">Github</a></li>
 		<li class="navbar-li"><a class="navbar-li-a" href="contacts.html">Contacts</a></li>
@@ -35,6 +38,8 @@
 	<p class="indent header-prop">~ My Work</p>
 		<p class="text-prop">
 		Currently working with <a href="https://www.linkedin.com/in/nathanpahucki?authType=NAME_SEARCH&authToken=947c&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CentityType%3AentityHistoryName%2CclickedEntityId%3Amynetwork_mynetwork_mynetwork_346538%2Cidx%3A1">Nathan Pahucki</a> a programmer who has been guiding and teaching me how to code. Some of the skills in coding in which I know are:
+		
+	<!-- List-->
 		<ul class="gray">
 			<li> Html</li>
 			<li> CSS</li>
