Cleaned up code

--- a/contacts.html
+++ b/contacts.html
@@ -27,9 +27,9 @@
 <div"divleft">
 
 	<p class"indent header-prop">Contact Information</p>
+	<!-- Margin -->
 	<hr style="margin-bottom;20px;">
-	<font color="gray">
-	<p class="indent">Email Me at: <a href="mailto:ethan8496@gmail.com">Ethan Ott</a></p>
+	<p class="indent text-prop">Email Me at: <a href="mailto:ethan8496@gmail.com">Ethan Ott</a></p>
 </p>
 <p>
 	View my work and check out other social media and other work related sites at:
@@ -38,7 +38,7 @@
 		<li><a href="https://geekli.st/ethott">GeekList</a>- Catch up with my current ideas and projects here!</li>
 		<li><a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">Linkedin</a>- View a work based profile of me here!</li>	
 	</ul>
-	</font>
+	<!-- Margin -->
 	<hr style="margin-bottom:20px;">
 	<p class"indent header-prop">Website Refrences:</p>
 	<p>
@@ -47,6 +47,7 @@
 		<li><a href="#">Apple Developer</a></li>
 		<li><a href="#">Stackoverflow</a></li>
 	</ul>
+	<!-- Margin -->
 	<hr style="margin-bottom:20px;">
 
 	<p class="bottom-prop"> <a href="#top">Back to top</a> | <a href="contacts.html">Contacts</a> | <a href="https://github.com/ethott">Github</a> | <a href="#">Appstore</a></p>
