--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
-<head>
-	<title>Ethan Ott</title>
-	<!-- Links page site.css and adds favicon-->
-	<link rel="stylesheet" type="text/css" href="site.css">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-</head>
-<body>
-	<!--Main home page image-->
-	<a name="top"></a>
+	<head>
+		<title>Ethan Ott</title>
+		<!-- Links page site.css and adds favicon-->
+		<link rel="stylesheet" type="text/css" href="site.css">
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	</head>
+	<body>
+		<!--Main home page image-->
+		<a name="top"></a>
 <div class="homepageimage">
 	<!-- Text displayed on the image "homepageimage.jpg"-->
 	<div class="name-prop indent">Ethan Ott</div>
@@ -34,6 +34,7 @@
 <p class="indent header-prop">~ About Me</p>
 	
 		<p class="text-prop">I am Ethan Ott, currently independitly studiyng Computer Science. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several iOs apps for the app store. My dream job is to work for google.    </p>
+		<!-- Margin -->
 	<hr style="margin-bottom:20px;">
 	<p class="indent header-prop">~ My Work</p>
 		<p class="text-prop">
@@ -63,6 +64,7 @@
 		</ul>
 		
 	</p>
+	<!-- Margin -->
 	<hr style="margin-bottom:20px;">
 	<!--Bottom Navigation Bar-->
 	<p class="bottom-prop"> <a href="#top">Back to top</a> | <a href="contacts.html">Contacts</a> | <a href="https://github.com/ethott">Github</a> | <a href="#">Appstore</a></p>
