--- a/index.html
+++ b/index.html
@@ -7,15 +7,37 @@
 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
+		<!--
+		Permission is hereby granted, free of charge, to any person
+		 obtaining a copy of this software and associated documentation
+		 files (the "Software"), to deal in the Software without
+		 restriction, including without limitation the rights to use,
+		 copy, modify, merge, publish, distribute, sublicense, and/or sell
+		 copies of the Software, and to permit persons to whom the
+		 Software is furnished to do so, subject to the following
+		 conditions:
+ 
+		 The above copyright notice and this permission notice shall be
+		 included in all copies or substantial portions of the Software.
+ 
+		 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+		 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+		 OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+		 NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+		 HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+		 WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+		 FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+		 OTHER DEALINGS IN THE SOFTWARE.-->
+		
 		<!--Main home page image-->
 		<a name="top"></a>
 <div class="homepageimage">
 	<!-- Text displayed on the image "homepageimage.jpg"-->
 	<div class="name-prop indent">Ethan Ott</div>
-	<div class="button"><a href="#">Check out my Apps on the App Store</a></div>
+	<div class="button buttonColor"><a href="#">Check out my Apps on the App Store</a></div>
 	<div class="button"><a href="https://github.com/ethott">Check out my Github account</a></div>
-	<div class="filler indent">Computer Programmer/ Nerd</div>
-	<div class="filler indent">Developer and Designer</div>
+	<div class="filler indent"> Fellow Computer Programmer/ Nerd</div>
+	<div class="filler indent">Fellow Developer and Designer</div>
 		
 </div>
 <!--Navigation Bar -->
@@ -33,7 +55,7 @@
 <!--About me section of the website-->
 <p class="indent header-prop">~ About Me</p>
 	
-		<p class="text-prop">I am Ethan Ott, currently independitly studiyng Computer Science. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several iOs apps for the app store. My dream job is to work for google.    </p>
+		<p class="text-prop">I am Ethan Ott, currently independently studiyng Computer Science. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several IOs apps for the app store. My dream job is to work for google.    </p>
 		<!-- Margin -->
 	<hr style="margin-bottom:20px;">
 	<p class="indent header-prop">~ My Work</p>
@@ -44,12 +66,12 @@
 		<ul class="gray">
 			<li> Html</li>
 			<li> CSS</li>
+			<li>Objective-C</li>
 		</ul>
 	</p>
 		<p class="text-prop">Some of the programming languages that I am currently learning are:</p>
 		<ul class="gray">
 			<li> Javascript</li>
-			<li> Objective-C</li>
 			<li> Arduino</li>
 			<li> Java</li>
 		</ul>
@@ -57,10 +79,10 @@
  Check out the code for most of my projects on <a href="https://github.com/ethott">Github</a>. Im planning on developing several more apps for the app store.  For more informaion about me and if you are seeking for any advice or to find links to lessons, go to  <a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">my profile</a> on linkedin also check out my contact page on this website or just go ahead and send me a email.
 	</p>
 	<p>
-		<p class="header-prop"> Work </p>
-		<ul class="text-prop">
+		<p class="header-prop">~ Work </p>
+		<ul class="text-prop ">
 			<li>iOS Developer and Web Designer 2014-(currently)</li> 
-			
+			<li>Internship comming soon
 		</ul>
 		
 	</p>
