--- a/contacts.html
+++ b/contacts.html
@@ -1,39 +1,21 @@
 <html>
 <head>
 	<title>Ethan Ott</title>
+	<link rel="stylesheet" type="text/css" href="site.css">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-	<!--
-	Permission is hereby granted, free of charge, to any person
-	 obtaining a copy of this software and associated documentation
-	 files (the "Software"), to deal in the Software without
-	 restriction, including without limitation the rights to use,
-	 copy, modify, merge, publish, distribute, sublicense, and/or sell
-	 copies of the Software, and to permit persons to whom the
-	 Software is furnished to do so, subject to the following
-	 conditions:
-
-	 The above copyright notice and this permission notice shall be
-	 included in all copies or substantial portions of the Software.
-
-	 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-	 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
-	 OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-	 NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
-	 HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
-	 WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-	 FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
-	 OTHER DEALINGS IN THE SOFTWARE.-->
+	
 	<div>
 		<!--Homepageimage code -->
 <div class="homepageimage">
-	<div class="name-prop indent">Ethan Ott</div>
-	<div class="button"><a href="#">Check out my Apps on the App Store</a></div>
+	<!-- Text displayed on the image "homepageimage.jpg"-->
+	<div class="name-prop indent"><a href="index.html">Ethan Ott</div>
+	<div class="button buttonColor"><a href="#">Check out my Apps on the App Store</a></div>
 	<div class="button"><a href="https://github.com/ethott">Check out my Github account</a></div>
-	<div class="filler indent">Computer Programmer/ Nerd</div>
-	<div class="filler indent">Developer and Designer</div>
+	<div class="filler indent"> Fellow Computer Programmer/ Nerd</div>
+	<div class="filler indent">Fellow Developer and Designer</div>
 		
 </div>
 <div class="navbar">
