--- a/contacts.html
+++ b/contacts.html
@@ -21,7 +21,7 @@
 <div class="navbar">
 	<ul class="navbar-ul">
 		
-		<li class="navbar-li"><a class="navbar-li-a" href="index.html">Home</a></li>
+		<li class="navbar-li"><a  href="index.html">Home</a></li>
 		<li class="navbar-li"><a class="navbar-li-a" href="https://github.com/ethott">Github</a></li>
 		<li class="navbar-li"><a class="navbar-li-a active-navbar-el" href="contacts.html" >Contacts</a></li>
 		<li class="navbar-li"><a class="navbar-li-a" href="#">App Store</a></li>
