--- a/index.html
+++ b/index.html
@@ -1,74 +1,45 @@
 <html>
-	<head>
-		<title>Ethan Ott</title>
-		<!-- Links page site.css and adds favicon-->
+<head>
 		<link rel="stylesheet" type="text/css" href="site.css">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	</head>
-	<body>
-		
-		<!--Main home page image-->
-		<a name="top"></a>
-<div class="homepageimage">
-	<!-- Text displayed on the image "homepageimage.jpg"-->
-	<div class="name-prop indent">Ethan Ott</div>
-	<div class="button buttonColor"><a href="#">Check out my Apps on the App Store</a></div>
-	<div class="button"><a href="https://github.com/ethott">Check out my Github account</a></div>
-	<div class="filler indent"> Fellow Computer Programmer/ Nerd</div>
-	<div class="filler indent">Fellow Developer and Designer</div>
-		
-</div>
-<!--Navigation Bar -->
-<div class="navbar">
-	<ul class="navbar-ul">
-		<!-- Text and buttons displayed on "navbar.jpg"-->
-		<li class="navbar-li"><a class="navbar-li-a active-navbar-el" href="index.html">Home</a></li>
-		<li class="navbar-li"><a class="navbar-li-a" href="https://github.com/ethott">Github</a></li>
-		<li class="navbar-li"><a class="navbar-li-a" href="contacts.html">Contacts</a></li>
-		<li class="navbar-li"><a class="navbar-li-a" href="#">App Store</a></li>
-	</ul>
-</div>
-	<p>
-		<div class="divleft">
-<!--About me section of the website-->
-<p class="indent header-prop">~ About Me</p>
+	<title>Ethan Ott</title>
+</head>
+<body>
+<div class="container">
 	
-		<p class="text-prop">I am Ethan Ott, currently independently studiyng Computer Science. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several IOs apps for the app store. My dream job is to work for google.    </p>
-		<!-- Margin -->
+	<!-- Left Element -->
+	
+	<div class="left-element">
+		<p>Image Here</p>
+	</div>
+	
+	<!-- Right Element -->
+	
+	<div class="right-element">
+		<div class="who-info">
+			<p><h3>Who</h3></p>
+			<p> My name is Ethan Ott, currently independently studiyng Computer Science. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several IOs apps for the app store. My dream job is to work for google.</p>
+			<p> Fluent in <u>HTML</u> and <u>CSS</u> and im improving on my Java and Java-Script everyday.
+			</p>
+		</div>
+		<hr style="margin-bottom:20px;">
+		<div class="what-info">
+			<p><h3>What</h3></p>
+			<p>Check out the code for most of my projects on Github. Im planning on developing several more apps for the app store. For more informaion about me and if you are seeking for any advice or to find links to lessons, go to my profile on linkedin also check out my contact page on this website or just go ahead and send me a email.</p>
+			<p>~ Work</p>
+		<ul>
+			<li>iOS Developer and Web Designer 2014-(currently)</li>
+			<li>Internship comming soon</li>
+		</ul>	
+		</div>
+		<hr style="margin-bottom:20px;">
+		<div class="when-info">
+			<p><h3>When</h3></p>
+			<p></p>
+		</div>
+	</div>
 	<hr style="margin-bottom:20px;">
-	<p class="indent header-prop">~ My Work</p>
-		<p class="text-prop">
-		Currently working with <a href="https://www.linkedin.com/in/nathanpahucki?authType=NAME_SEARCH&authToken=947c&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CentityType%3AentityHistoryName%2CclickedEntityId%3Amynetwork_mynetwork_mynetwork_346538%2Cidx%3A1">Nathan Pahucki</a> a programmer who has been guiding and teaching me how to code. Some of the skills in coding in which I know are:
-		
-	<!-- List-->
-		<ul class="gray">
-			<li> Html</li>
-			<li> CSS</li>
-			<li>Objective-C</li>
-		</ul>
-	</p>
-		<p class="text-prop">Some of the programming languages that I am currently learning are:</p>
-		<ul class="gray">
-			<li> Javascript</li>
-			<li> Arduino</li>
-			<li> Java</li>
-		</ul>
-		<p class="text-prop">
- Check out the code for most of my projects on <a href="https://github.com/ethott">Github</a>. Im planning on developing several more apps for the app store.  For more informaion about me and if you are seeking for any advice or to find links to lessons, go to  <a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">my profile</a> on linkedin also check out my contact page on this website or just go ahead and send me a email.
-	</p>
-	<p>
-		<p class="header-prop">~ Work </p>
-		<ul class="text-prop ">
-			<li>iOS Developer and Web Designer 2014-(currently)</li> 
-			<li>Internship comming soon
-		</ul>
-		
-	</p>
-	<!-- Margin -->
-	<hr style="margin-bottom:20px;">
-	<!--Bottom Navigation Bar-->
-	<p class="bottom-prop"> <a href="#top">Back to top</a> | <a href="contacts.html">Contacts</a> | <a href="https://github.com/ethott">Github</a> | <a href="#">Appstore</a></p>
 </div>
-</body>
+</body>	
 </html>
