--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 	<!-- Left Element -->
 	
 	<div class="left-element">
+		<div class="name_tag">
+			<p><h1>Hey, Im Ethan</h1></p>
+		</div>
+		<div class="block_title">
+			<p><h2>A <em>Utahn developer</em> working as a <em>Independet Developer</em></h2></p>
+		</div>
 		<div class="getintouch_tag">
-			<p>Hi</p>
+			<p>Get in Touch</p>
 			
 		</div>
 	</div>
@@ -20,20 +26,28 @@
 	<!-- Right Element -->
 	
 	<div class="right-element">
+		<div class="header_tag">
+		<p><h3>Who</h3></p>
+		</div>
 		<div class="who-info">
-			<p><h3>Who</h3></p>
+			<!-- <p><h3>Who</h3></p> -->
 			<p> My name is Ethan Ott, currently independently studiyng Computer Science. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several IOs apps for the app store. My dream job is to work for google.</p>
 			<p> Fluent in <u style="color: grey;">HTML</u> and <u style="color: grey;">CSS</u> and im improving on my <u style="color: grey;">Java</u> and <u style="color: grey;">Java-Script</u> everyday.
 			</p>
 		</div>
 		<hr style="margin-bottom:20px;">
+		<div class="header_tag">
+		<p><h3>What</h3></p>
+		</div>
 		<div class="what-info">
-			<p><h3>What</h3></p>
+			<!-- <p><h3>What</h3></p> -->
 			<p>Check out the code for most of my projects on Github. Im planning on developing several more apps for the app store. For more informaion about me and if you are seeking for any advice or to find links to lessons, go to my profile on linkedin also check out my contact page on this website or just go ahead and send me a email.</p>
 		</div>
 		<hr style="margin-bottom:20px;">
+		<div class="header_tag">
+		<p><h3>When</h3></p>
+		</div>
 		<div class="when-info">
-			<p><h3>When</h3></p>
 				<p><br><b>iOS Developer and Web Designer 2014-(currently)</br></b>
 				
 					Currently designing IOS apps for the app store & developing web applications
