--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <div class="container">
 	
 	<!-- Left Element -->
-	
 	<div class="left-element">
 		<div class="name_tag">
 			<p><h1>Hey, Im Ethan</h1></p>
@@ -18,7 +17,15 @@
 			<p><h2>A <em>Utahn developer</em> working as a <em>Independet Developer</em></h2></p>
 		</div>
 		<div class="getintouch_tag">
-			<p>Get in Touch</p>
+			<p><a href="mailto:ethan84096@gmail.com">Get in Touch</a></p>
+			
+		</div>
+		<div class="socialmedia_container">
+			<div class="github_tag">
+			 </div>
+			<div></div>
+			<div></div>
+			<div></div>
 			
 		</div>
 	</div>
