--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 		</div>
 	
 			<div class="github_tag">
-				<a href="#">
+				<a href="https://github.com/ethott/ethott.github.io">
 				<img src="github_logo.png" alt="Smiley face" height="50" width="50">
 				</a>
 			 </div>
 			<div class="twitter_tag">
-				<a href="#">
+				<a href="https://twitter.com/Ethott15">
 				<img src="twitter_icon.png" alt="Smiley face" height="50" width="50">
 			</a>
 			</div>
