--- a/index.html
+++ b/index.html
@@ -1,89 +1,110 @@
 <!-- Gmail:(Ethan84096@gmail.com)
-Copyright 2017 Ethan Ott
-
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->
-
+   Copyright 2017 Ethan Ott
+   
+   Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+   
+   The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+   
+   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->
 <html>
-<head>
-		<link rel="stylesheet" type="text/css" href="site.css">
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<title>Ethan Ott</title>
-</head>
-<body>
-<div class="container">
-	
-	<!-- Left Element -->
-	<div class="left-element">
-		<div class="name_tag">
-			<p><h1>Hey, Im Ethan</h1></p>
-		</div>
-		<div class="block_title">
-			<p><h2>A <em>Utahn developer</em> working as a <em>Independet Developer</em></h2></p>
-		</div>
-		<div class="getintouch_tag">
-			<p><a href="mailto:ethan84096@gmail.com">Get in Touch</a></p>
-			
-		</div>
-	
-			<div class="github_tag">
-				<a href="https://github.com/ethott/ethott.github.io">
-				<img src="github_logo.png" alt="Smiley face" height="50" width="50">
-				</a>
-			 </div>
-			<div class="twitter_tag">
-				<a href="https://twitter.com/Ethott15">
-				<img src="twitter_icon.png" alt="Smiley face" height="50" width="50">
-			</a>
-			</div>
-			<div class="linkden_tag">
-				<a href="https://www.linkedin.com/in/ethan-ott-28a72a102/">
-				<img src="linkedin_icon.png" alt="Smiley face" height="50" width="50">
-				</a>
-			</div>
-			
-		</div>
-		
-	<!-- Right Element -->
-	
-	<div class="right-element">
-		<div class="header_tag">
-		<p><h3>Who</h3></p>
-		</div>
-		<div class="who-info">
-			<!-- <p><h3>Who</h3></p> -->
-			<p> My name is Ethan Ott, currently independently studiyng Computer Science in the Greater Salt Lake Area. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several IOs apps for the app store as well as several websites. Im currently looking for intenships to further my understading of computer science</p>
-			<p> Fluent in <u style="color: grey;">HTML</u> and <u style="color: grey;">CSS</u> and im improving on my <u style="color: grey;">Java</u> and <u style="color: grey;">Java-Script</u> everyday.
-			</p>
-		</div>
-		<hr style="margin-bottom:20px;">
-		<div class="header_tag">
-		<p><h3>What</h3></p>
-		</div>
-		<div class="what-info">
-			<!-- <p><h3>What</h3></p> -->
-			<p>Check out the code for most of my projects on Github. Im planning on developing several more apps for the app store. For more informaion about me and if you are seeking for any advice or to find links to lessons, go to my profile on linkedin also check out my contact page on this website or just go ahead and send me a email.</p>
-		</div>
-		<hr style="margin-bottom:20px;">
-		<div class="header_tag">
-		<p><h3>When</h3></p>
-		</div>
-		<div class="when-info">
-				<p><br><b>iOS Developer and Web Designer 2014-(currently)</br></b>
-					Currently designing IOS apps for the app store & developing web applications
-				</p>	
-				<p><b>Internship comming soon</b></p>
-					<div>
-						<hr style="margin-bottom:20px;">
-						<p class="lastabout_tag">Ethan Ott 2017</p>
-					<div>
-			
-		</div>
-	</div>
-</div>
-</body>	
+   <head>
+      <link rel="stylesheet" type="text/css" href="site.css">
+      <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+      <link rel="icon" href="/favicon.ico" type="image/x-icon">
+	  <!-- Automatically refresh page every one second -->
+	   <!-- <meta http-equiv="refresh" content="1"> -->
+      <title>Ethan Ott</title>
+   </head>
+   <body>
+      <div class="container">
+      <!-- Left Element -->
+      <div class="left-element">
+         <div class="name_tag">
+            <p>
+            <h1>Hey, Im Ethan</h1>
+            </p>
+         </div>
+         <div class="block_title">
+            <p>
+            <h2>A <em>Utahn developer</em> working as a <em>Independet Developer</em></h2>
+            </p>
+         </div>
+         <div class="getintouch_tag">
+            <p><a href="mailto:ethan84096@gmail.com">Get in Touch</a></p>
+         </div>
+		 
+		 <div class="blur">
+         <div class="github_tag">
+            <a href="https://github.com/ethott/ethott.github.io">
+            <img src="github_logo.png" alt="Smiley face" height="50" width="50">
+            </a>
+         </div>
+         <div class="twitter_tag">
+            <a href="https://twitter.com/Ethott15">
+            <img src="twitter_icon.png" alt="Smiley face" height="50" width="50">
+            </a>
+         </div>
+         <div class="linkden_tag">
+            <a href="https://www.linkedin.com/in/ethan-ott-28a72a102/">
+            <img src="linkedin_icon.png" alt="Smiley face" height="50" width="50">
+            </a>
+         </div>
+	 </div>
+      </div>
+      <!-- Right Element -->
+      <div class="right-element">
+      <div class="header_tag">
+         <p>
+         <h3>
+            <span style="color:#0085ff">W</span>
+            <span style="color:#8dc8ff">h</span>
+            <span style="color:#d8d8d8">o</span>
+         </h3>
+         </p>
+      </div>
+      <div class="info">
+         <!-- <p><h3>Who</h3></p> -->
+         <p>My name is Ethan Ott, currently independently studiyng Computer Science in the Greater Salt Lake Area. My focus is mainly on developing and designing iOS based applications and web based applications. I am planning on developing several IOs apps for the app store as well as several websites. Im currently looking for intenships to further my understading of computer science</p>
+         <p> Fluent in <u style="color: grey;">HTML</u> and <u style="color: grey;">CSS</u> and im improving on my <u style="color: grey;">Java</u> and <u style="color: grey;">Java-Script</u> everyday.
+         </p>
+      </div>
+      <hr style="margin-bottom:20px;">
+      <div class="header_tag">
+         <p>
+         <h3>
+            <span style="color:#0085ff">W</span>
+            <span style="color:#8dc8ff">h</span>
+            <span style="color:#3ed3ff">a</span>
+            <span style="color:#d8d8d8">t</span>
+         </h3>
+         </p>
+      </div>
+      <div class="info">
+         <!-- <p><h3>What</h3></p> -->
+         <p>Check out the code for most of my projects on Github. Im planning on developing several more apps for the app store. For more informaion about me and if you are seeking for any advice or to find links to lessons, go to my profile on linkedin also check out my contact page on this website or just go ahead and send me a email.</p>
+      </div>
+      <hr style="margin-bottom:20px;">
+      <div class="header_tag">
+         <p>
+         <h3>
+            <span style="color:#0085ff">W</span>
+            <span style="color:#8dc8ff">h</span>
+            <span style="color:#3ed3ff">e</span>
+            <span style="color:#d8d8d8">n</span>
+         </h3>
+         </p>
+      </div>
+      <div class="when-info">
+         <p><br><b>iOS Developer and Web Designer 2014-(currently)</br></b>
+            Currently designing IOS apps for the app store & developing web applications
+         </p>
+         <p><b>Internship comming soon</b></p>
+         <div>
+            <hr style="margin-bottom:20px;">
+            <p class="lastabout_tag">Ethan Ott 2017</p>
+            <div>
+            </div>
+         </div>
+      </div>
+   </body>
 </html>
