Fixed white space and clarifed text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
       <div class="info">
          <!-- <p><h3>What</h3></p> -->
-         <p>Check out the code for most of my projects on Github. Im planning on developing several more apps for the app store. For more informaion about me and if you are seeking for any advice or to find links to lessons, go to my profile on linkedin also check out my contact page on this website or just go ahead and send me a email.</p>
+         <p>Check out the code for most of my personal projects on Github. Im planning on developing apps for the app store. For more informaion about me and if you are seeking for any advice or to find links to lessons, go to my profile on linkedin also check out my  linkedin page in order to find contatct info or go ahead and send me a email.</p>
       </div>
       <hr style="margin-bottom:20px;">
       <div class="header_tag">
