--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <h2>A <em>Utahn developer</em> working as a <em>Independet Developer</em></h2>
             </p>
          </div>
+		  <!--All the links to my social media platforms-->
          <div class="getintouch_tag">
             <p><a href="mailto:ethan84096@gmail.com">Get in Touch</a></p>
          </div>
@@ -56,6 +57,7 @@
       <div class="header_tag">
          <p>
          <h3>
+			 <!--Show the colors of the individual colors -->
             <span style="color:#0085ff">W</span>
             <span style="color:#8dc8ff">h</span>
             <span style="color:#d8d8d8">o</span>
@@ -72,6 +74,7 @@
       <div class="header_tag">
          <p>
          <h3>
+			  <!--Show the colors of the individual colors -->
             <span style="color:#0085ff">W</span>
             <span style="color:#8dc8ff">h</span>
             <span style="color:#3ed3ff">a</span>
@@ -80,13 +83,14 @@
          </p>
       </div>
       <div class="info">
-         <!-- <p><h3>What</h3></p> -->
-         <p>Check out the code for most of my personal projects on Github. Im planning on developing apps for the app store. For more informaion about me and if you are seeking for any advice or to find links to lessons, go to my profile on linkedin also check out my  linkedin page in order to find contatct info or go ahead and send me a email.</p>
+         <!-- <</p> -->
+         <p>Check out the code for most of my personal projects on Github. Im planning on developing apps for the app store. For more informaion about me and if you are seeking for any advice or to find links to lessons, go to my profile on linkedin also check out my  linkedin page in order to find contatct info or go ahead and send me a email. Also check out my Github for any past or currnet coding projects!</p>
       </div>
       <hr style="margin-bottom:20px;">
       <div class="header_tag">
          <p>
          <h3>
+			  <!--Show the colors of the individual colors -->
             <span style="color:#0085ff">W</span>
             <span style="color:#8dc8ff">h</span>
             <span style="color:#3ed3ff">e</span>
